--- a/popup.html
+++ b/popup.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-  </style>
+	<link rel="stylesheet" href="css/bootstrap.min.css"></style>
+	<script type="text/javascript" src="script.js">
+	</script>
 </head>
-<body style="width:400px;height:150px">
-  Select subject<br><br>
-  <select style="width:100%">
-    <option value="random">Random</option>
-  </select>
+<body style="width:400px">
+	<div style="padding:10px 10px 10px 10px">
+		Select subject<br>
+		<select id="subjectSelect" style="width:100%" class="custom-select" multiple>
+		</select>		
+	</div>
 </body>
 </html>
