--- a/popup.html
+++ b/popup.html
@@ -6,9 +6,9 @@
 	</script>
 </head>
 <body style="width:400px">
-	<div style="padding:10px 10px 10px 10px">
+	<div style="padding:10px 10px 10px 10px;height:100%">
 		Select subject<br>
-		<select id="subjectSelect" style="width:100%" class="custom-select" multiple>
+		<select id="subjectSelect" style="width:100%;height:300px" class="custom-select" multiple>
 		</select>		
 	</div>
 </body>
